# daas-bot

./: Cargo.toml  README.md
scripts/: gen-keys.py  send-message.py
src/: cli.rs  main.rs  register.rs
src/export/: error.rs  item.rs  mod.rs  vote.rs
src/server/: error.rs  into_interaction_response.rs  into_response.rs  mod.rs  validate.rs
src/server/handlers/: cleanup.rs  disable.rs  enable.rs  export.rs  help.rs  mod.rs  ping.rs
src/sql/: error.rs  mod.rs  to_sql_integer.rs
src/sql/bot/: mod.rs
src/sql/bot/migrations/: 20260614231454_enabled_channels.sql
src/sql/export/: mod.rs  schema.sql
