[package]
name = "daas-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"] }
rusqlite = "0.40.1"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "http", "rustls_backend"] }
tokio = { version = "1.52.3", features = ["full"] }
