[package]
name = "daas-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"] }
derive_more = { version = "2.1.1", features = ["debug", "deref", "into"] }
hex = "0.4.3"
rusqlite = "0.40.1"
serde_json = "1.0.150"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "http", "interactions_endpoint", "rustls_backend"] }
thiserror = "2.0.18"
