[package]
name = "daas-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"] }
derive_more = { version = "2.1.1", features = ["debug", "deref", "into"] }
either = "1.16.0"
hex = "0.4.3"
refinery = { version = "0.9.2", features = ["rusqlite"] }
rusqlite = { version = "0.39", features = ["cache"] }
serde_json = "1.0.150"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "http", "interactions_endpoint", "model", "rustls_backend"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "rt", "rt-multi-thread"] }
